--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -33,6 +33,7 @@ main {
 }
 
 img {
+    height: 100%;
     width: 100%;
 }
 
@@ -166,12 +167,14 @@ section {
 
 .recipe-card-image-container {
     width: 100%;
+    max-height: 40%;
 }
 
 .recip-card-data-wrapper {
     padding-inline: 1rem;
     gap: 1rem;
     flex: 1 0 auto;
+    width: 100%;
 }
 
 .recipe-card:hover {
