Add error 404 message for non published recipe display and minor front end fix

--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -201,6 +201,7 @@ section {
     justify-content: center;
     gap: 3rem;
     text-align: center;
+    padding: 1rem 0;
 }
 
 .recipe-card-more-info {
