--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,7 +1,7 @@
 <header id="main-header">
     <div id="header-logo-container">
         <h1 id="logo">
-            <a href="{% url 'home' %}">
+            <a href="{% url 'recipes:home' %}">
                 <i class="fa-solid fa-utensils"></i>
                 Recipes
             </a>
