Fix recipe-card front-end

--- a/recipes/templates/recipes/partials/recipe-list.html
+++ b/recipes/templates/recipes/partials/recipe-list.html
@@ -1,4 +1,4 @@
-<section class="recipes-container container w80">
+<section class="recipes-container">
     <!-- Recipe cards -->
     <!-- TODO need to make for loop for django -->
      <div class="recipe-cards">
