--- a/recipes/templates/recipes/partials/recipe-list.html
+++ b/recipes/templates/recipes/partials/recipe-list.html
@@ -4,6 +4,8 @@
      <div class="recipe-cards">
         {% for recipe in recipes %}
             {% include "recipes/partials/recipe-card.html" %}
+        {% empty %}
+            <p>No recipes found</p>
         {% endfor %}
      </div>
 
